# gwsh

./: .dockerignore  Dockerfile  nancysgun.db
server/: .env  clean_orphans.py  gwsh.db  main.py  pyproject.toml  scratch_db.py  test_backup.py  test_history.py  test_local.py
server/core/: __init__.py  config.py  db.py  seed.py  seed_full_db.py  table_migration.py
server/core/dependencies/: __init__.py  auth_dependencies.py  repo_dependencies.py  services_dependencies.py
server/docs/: Untitled Diagram.drawio
server/models/: __init__.py  base.py  base_model.py  branch.py  branch_model.py  catalog_model.py  category.py  extra.py  history.py  history_item.py  history_item_extra.py  history_model.py  menu_item.py  menu_item_extra.py  menu_model.py  order.py  order_item.py  order_item_extra.py  order_model.py  product.py  size.py  table.py  user.py  user_model.py
server/repositories/: __init__.py  base.py  base_repository.py  branch.py  branch_repository.py  catalog.py  catalog_repository.py  history_repository.py  menu_repository.py  order_repository.py  user.py  user_repository.py
server/routes/: __init__.py  auth_router.py  branch_router.py  category_router.py  dependencies.py  extra_router.py  history_router.py  menu_router.py  order_router.py  product_router.py  size_router.py  table_router.py  upload_router.py  user_router.py
server/services/: __init__.py  auth.py  auth_service.py  backup_service.py  base.py  base_service.py  branch_service.py  catalog.py  catalog_service.py  history_service.py  menu_service.py  order_service.py  user.py  user_service.py
(+73 files in other folders)
